--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ h6{
     color: #F0B429;
 }
 header{
-    background-image: url(../img/UNAD1.png);
+    background-image: url(../html5-imagenes/UNAD1.png);
     background-position: left;
     background-repeat: no-repeat;
     background-size: 200px 145px;
