--- a/css/style_index.css
+++ b/css/style_index.css
@@ -60,7 +60,7 @@ h5{
     
 }
 header{
-    background-image: url(../img/UNAD1.png);
+    background-image: url(../html5-imagenes/UNAD1.png);
     background-position: left;
     background-repeat: no-repeat;
     background-size: 200px 145px;
