cambios en el nav

--- a/css/style.css
+++ b/css/style.css
@@ -17,20 +17,22 @@ body {
 h1{
     margin-top: 35px;
     font-family: 'Libre Franklin', sans-serif;
-    font-size: 60px;
+    font-size: 58px;
     text-align: right;
-    margin-right: 145px;
+    margin-right: 105px;
     color: #005883;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 h2{
-    margin-left: 180px;
+    /*margin-left: 180px;*/
     font-family: 'Libre Franklin', sans-serif;
     font-size: 40px;
-    text-align: center;
+    text-align: right;
+    margin-right: 105px;
     color: #005883;
-    margin-top: 0px;
+    margin-top: 15px;
+}
 }
 h3{
     margin-top: 15px;
