--- a/css/style_index.css
+++ b/css/style_index.css
@@ -138,7 +138,7 @@ aside{
     width: 280px;
     float: left;
     margin-left: 20px;
-    /*height: 450px;*/
+    height: auto;
     padding-left: 19px;
     
     /*margin-left: 20px;*/
@@ -150,7 +150,7 @@ figure{
 }
 img{
     
-    width: 250px;
+    width: 450px;
     height: auto;
 }
 hr{
